@@ -246,6 +246,7 @@ export(spline.E)
 export(spline.T)
 export(std)
 export(sub_)
+export(sublast)
 export(tab)
 export(tab_)
 export(tab__)
