@@ -37,7 +37,8 @@ for numerical variables,
 the simple ICC with (variance between) / (variance between + variance
 within) applied to the rank (by default) of the variable. In either case, a
 value of 1 signifies a variable that is constant within clusters and a value
-of 0, a variable that is perfectly balanced within clusters.
+of 0, a variable that is perfectly balanced within clusters, in the sense
+that within-cluster means are identical.
 }
 \examples{
   gicc( hs, ~ school)
